cabal-version:   3.12
name:            session
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          Massimo Bortolato
maintainer:      massimo.bortolato@gmail.com

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Session.Backends.Postgres
    Session.Frontends.Scotty
    Session.Session

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base               >=4.21.0       && <4.22
    , base64             >=1.0          && <1.1
    , bytestring         >=0.12.2       && <0.13
    , crypton            >=1.0.4        && <1.1
    , lucid2             >=0.0.20250303 && <0.1
    , mtl                >=2.3.1        && <2.4
    , network            >=3.2.8        && <3.3
    , postgresql-simple  >=0.7.0        && <0.8
    , regex-tdfa         >=1.3.2        && <1.4
    , resource-pool      >=0.5.0        && <0.6
    , scotty             >=0.22         && <0.23
    , text               >=2.1.2        && <2.2
    , time               >=1.14
    , transformers       >=0.6.1        && <0.7
    , unliftio-core      >=0.2.1        && <0.3
    , uuid               >=1.3.16       && <1.4
    , wai                >=3.2.4        && <3.3

  hs-source-dirs:   src
  default-language: GHC2024
